Make the makerspace logo use a fixed aspect ratio to prevent layout shifts as the page loads.

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1483,3 +1483,8 @@ $palette-red: $palette4;
     flex-direction: column;
     align-items: center;
 }
+
+.makerspace-logo {
+    // Setting an aspect ratio is important to avoid layout shifts as the page loads
+    aspect-ratio: 300/210;
+}
